--- a/pro/src/render/pages/home/header/style.less
+++ b/pro/src/render/pages/home/header/style.less
@@ -1,6 +1,6 @@
-@import url(../../../theme.less);
+@import url(/src/render/theme.less);
 
-.@{class-prefix}-header {
+.@{class-prefix}header {
     height: 100px;
     background: #171a21;
     color: #fff;
