--- a/pro/src/render/pages/home/header/style.less
+++ b/pro/src/render/pages/home/header/style.less
@@ -2,8 +2,8 @@
 
 .@{class-prefix}header {
     height: 100px;
-    background: #171a21;
-    color: #fff;
+    background: var(--bg);
+    color: var(--text);
     display: flex;
     justify-content: center;
     align-items: center;
