--- a/pro/src/render/components/titlebar/index.less
+++ b/pro/src/render/components/titlebar/index.less
@@ -3,6 +3,25 @@
 .@{class-prefix}title-bar {
     -webkit-app-region: drag;
     user-select: none;
+
+    .@{class-prefix}window-controls {
+        -webkit-app-region: no-drag;
+        float: right;
+        height: 100%;
+        margin: 0 10px;
+        display: flex;
+        align-items: center;
+        div {
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            text-align: center;
+            &:hover {
+                background: var(--bg-hover);
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 .@{class-prefix}frameless {
