--- a/client/src/render/app.css
+++ b/client/src/render/app.css
@@ -3,4 +3,5 @@ body {
     font-family: var(--font-family);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow: hidden;
 }
