--- a/client/src/render/components/titlebar/index.less
+++ b/client/src/render/components/titlebar/index.less
@@ -3,6 +3,7 @@
 .@{class-prefix}title-bar {
     -webkit-app-region: drag;
     user-select: none;
+    background: var(--lime-nature);
 
     .@{class-prefix}window-controls {
         -webkit-app-region: no-drag;
