--- a/client/src/render/vars.css
+++ b/client/src/render/vars.css
@@ -50,4 +50,6 @@
     --s-border-radius: 2px;
     --m-border-radius: var(--s-border-radius) + 2px;
     --l-border-radius: var(--s-border-radius) + 6px;
+
+    --box-shadow: 1px 1px 6px 1px var(--gray-6);
 }
