--- a/client/src/render/vars.css
+++ b/client/src/render/vars.css
@@ -40,16 +40,16 @@
     --text-hover: var(--daybreak-blue);
 
     --s-font-size: 12px;
-    --m-font-size: var(--s-font-size) + 6px;
-    --l-font-size: var(--s-font-size) + 12px;
+    --m-font-size: 16px;
+    --l-font-size: 24px;
 
     --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
 
     --s-border-radius: 2px;
-    --m-border-radius: var(--s-border-radius) + 2px;
-    --l-border-radius: var(--s-border-radius) + 6px;
+    --m-border-radius: 4px;
+    --l-border-radius: 8px;
 
     --box-shadow: 1px 1px 6px 1px var(--gray-6);
 }
