--- a/client/src/render/pages/userset/index.less
+++ b/client/src/render/pages/userset/index.less
@@ -10,5 +10,27 @@
     &-content {
         flex: 1;
         margin-left: 20px;
+        &-set {
+            &-avatar {
+                position: relative;
+                &-mask {
+                    cursor: pointer;
+                    top: 0;
+                    left: 0;
+                    position: absolute;
+                    width: 80px;
+                    height: 80px;
+                    text-align: center;
+                    line-height: 80px;
+                    font-size: var(--s-font-size);
+                    border-radius: 50%;
+                    opacity: 0;
+                    &:hover {
+                        background: var(--gray-3);
+                        opacity: 0.6;
+                    }
+                }
+            }
+        }
     }
 }
