--- a/client/src/render/pages/home/views/chat/index.less
+++ b/client/src/render/pages/home/views/chat/index.less
@@ -10,9 +10,11 @@
         display: flex;
         flex-direction: column;
         &-body {
-            flex: 1;
+            // flex: 1;
             background: var(--gray-2);
             padding: 10px;
+            height: 500px;
+            overflow: auto;
             &-title {
                 text-align: center;
                 font-size: var(--l-font-size);
@@ -22,6 +24,7 @@
                 display: flex;
                 margin: 10px 0;
                 &-content {
+                    margin: 0 10px;
                     display: flex;
                     padding: 4px;
                     border-radius: var(--l-border-radius);
