--- a/client/src/render/pages/home/views/chat/index.less
+++ b/client/src/render/pages/home/views/chat/index.less
@@ -55,7 +55,7 @@
         margin-right: 20px;
         box-shadow: var(--box-shadow);
         &-list {
-            margin-top: 20px;
+            padding: 10px;
         }
     }
 }
