feat: send media

--- a/client/src/render/pages/home/views/chat/index.less
+++ b/client/src/render/pages/home/views/chat/index.less
@@ -53,6 +53,12 @@
         &-send {
             flex: 0 0 200px;
             background: var(--gray-1);
+            &-functions {
+                padding: 10px;
+                &-function {
+                    margin: 0 10px;
+                }
+            }
         }
     }
     &-left-panel {
